<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTreinoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/voltar_add_treino"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="backButtonTelaCadastro"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/titulo" />

        <ImageView
            android:id="@+id/sair_add_treino"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="sairTelaCadastro"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/nome_treino"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/nomeTreino"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataTrino"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/data_treino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CalendarView
        android:id="@+id/data_treino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/gigEmailCad"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_treino" />

    <EditText
        android:id="@+id/desc_treino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/backshape"
        android:ems="10"
        android:hint="@string/descrTreino"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_treino" />

    <Button
        android:id="@+id/botao_cadastrar"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_fundo_verde"
        android:text="@string/botCadastrar"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_treino" />

    <Button
        android:id="@+id/botao_limpar"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bt_fundo_verde"
        android:onClick="clearCamps"
        android:text="@string/botLimpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/desc_treino" />

</androidx.constraintlayout.widget.ConstraintLayout>